# MIEI

./: .gitattributes  .gitignore  README.md
1º Ano/1º Semestre/LI1/.svn/: wc.db
1º Ano/2º Semestre/LI2/projeto/: querys.txt
1º Ano/2º Semestre/PI/50_questoes/: 50_questoes.c  50questions2.c  50questoes_pt2.c  questoes2.c
1º Ano/2º Semestre/PI/testes/: ResRecurso2016.c  ResTeste2016.c
2º Ano/1º Semestre/ALG/algoritmos/: algoritmos.c  array.c  buffer.h  minHeaps.c  teste.c
2º Ano/1º Semestre/CD/materia/: PASS DOS PDFS.txt
2º Ano/2º Semestre/CP/projeto/: a.out  testing.c  testing.hs
2º Ano/2º Semestre/CP/stalker/: BTree.hs  Cp.hs  Exp.hs  LTree.hs  List.hs  Nat.hs  Probability.hs  St.hs  cp1617f02q3.hs  demos.hs
2º Ano/2º Semestre/CR/aulas/: ex5.R  exercicio2.R  exercicioCOROA.R  exercicios1.R  exercicios3.R
2º Ano/2º Semestre/EM/: .~ercicios_21_27.doc
2º Ano/2º Semestre/EM/exercicios/: Exercicios_21_27.doc  Exercicios_28_31.doc  Resnick-SeleçãoExercícios-2015-16_17 (8-11)MiEI.doc  Resnick-SeleçãoExercícios-2015-2016_17 (1-7l)MIEI.doc  errata cap22-SeleçãoExercícios-2016-2017-MIEI.doc
2º Ano/2º Semestre/LI3/kit1/: Exercício prático.txt
2º Ano/2º Semestre/POO/fichas/: LLCandidato.java
2º Ano/2º Semestre/POO/testes/: Teste-Recurso-POO.rar  Teste_2014-15_POO_LEI_Resolucao.rar  Teste_2015-16_POO_MiEI_Resolucao.rar
2º Ano/2º Semestre/SO/guioes/: AULA1.c  AULA2.c  AULA3.c  AULA4.c  AULA5.c  AULA6.c  AULA7.c  AULA8.c  coiso.txt  ex3  ex4  ex6  laranjas.txt
2º Ano/2º Semestre/SO/resoluçoes_kiko/: 2014boundedrun.c  2014conta.c  2014encontra.c  2015atrasa.c  2015fifoOrdena.c  2015sort.c  2016captcha.c  2016ctrl.c  2017paginas.c  (+6 more)
3º Ano/2º Semestre/CG/aulas/aula3/code/: CMakeLists.txt  main.cpp
3º Ano/2º Semestre/CG/projeto/parte3/engine/: CMakeLists.txt  engine.cpp
4º Ano/2º Semestre/AA2/: README.md
4º Ano/2º Semestre/EW/: README.md
4º Ano/2º Semestre/GGCD/: big_data_teste_modelo.docx
4º Ano/2º Semestre/GPS/: PBS-SIHEP-ordenada.mpp
4º Ano/2º Semestre/LEI/: README.md
(+2272 files in other folders)
